[gd_scene load_steps=9 format=3 uid="uid://y5brdddlya41"]

[ext_resource type="Script" uid="uid://dcsa4i4ma0mfi" path="res://Scripts/Landscape/landscape_game.gd" id="1_10kxa"]

[sub_resource type="LabelSettings" id="LabelSettings_10kxa"]
font_size = 30
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hu673"]
font_size = 40

[sub_resource type="LabelSettings" id="LabelSettings_x5w1u"]
font_size = 30
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_joduh"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_dntu7"]
font_size = 50

[sub_resource type="LabelSettings" id="LabelSettings_nmfhp"]
font_size = 40
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_6jhff"]
font_size = 50

[node name="Landscape_Game" type="Node2D"]
script = ExtResource("1_10kxa")

[node name="Transform" type="Node2D" parent="."]

[node name="Control" type="Control" parent="Transform"]
layout_mode = 3
anchors_preset = 0
offset_right = 720.0
offset_bottom = 1280.0

[node name="ColorRect" type="ColorRect" parent="Transform/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="instructionsPanel" type="Control" parent="Transform/Control/ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Transform/Control/ColorRect/instructionsPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -329.0
offset_top = 6.0
offset_right = 329.0
offset_bottom = 93.0
grow_horizontal = 2
text = "Recuerda este paisaje, cuando lo memorices, 
presiona continuar."
label_settings = SubResource("LabelSettings_10kxa")
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Transform/Control/ColorRect/instructionsPanel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -336.0
offset_top = -133.5
offset_right = 336.0
offset_bottom = 133.5
grow_horizontal = 2
grow_vertical = 2
text = "Ahora vas a ver varios paisajes.
Si ves alguno de los que memorizaste, poné Sí.
En caso de que no esté, poné No.

Presiona \"Continuar\" para comenzar"
label_settings = SubResource("LabelSettings_10kxa")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextButton" type="Button" parent="Transform/Control/ColorRect/instructionsPanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -103.0
offset_right = 100.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="Transform/Control/ColorRect/instructionsPanel/NextButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Continuar"
label_settings = SubResource("LabelSettings_hu673")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GamePanel" type="Control" parent="Transform/Control/ColorRect"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Transform/Control/ColorRect/GamePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -222.0
offset_top = 6.0
offset_right = 222.0
offset_bottom = 93.0
grow_horizontal = 2
text = "Presiona \"SI\" si viste el paisaje.
Presiona \"No\" si no lo viste."
label_settings = SubResource("LabelSettings_x5w1u")
horizontal_alignment = 1

[node name="YesButton" type="Button" parent="Transform/Control/ColorRect/GamePanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -277.0
offset_top = -103.0
offset_right = -77.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="Transform/Control/ColorRect/GamePanel/YesButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Si"
label_settings = SubResource("LabelSettings_joduh")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NoButton" type="Button" parent="Transform/Control/ColorRect/GamePanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 77.0
offset_top = -103.0
offset_right = 277.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="Transform/Control/ColorRect/GamePanel/NoButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "No"
label_settings = SubResource("LabelSettings_dntu7")
horizontal_alignment = 1
vertical_alignment = 1

[node name="EndGame" type="Control" parent="Transform/Control/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Label" type="Label" parent="Transform/Control/ColorRect/EndGame"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Aciertos: 0"
label_settings = SubResource("LabelSettings_nmfhp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="EndGame" type="Button" parent="Transform/Control/ColorRect/EndGame"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -115.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="Transform/Control/ColorRect/EndGame/EndGame"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Menu"
label_settings = SubResource("LabelSettings_6jhff")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Transform/Control/ColorRect/instructionsPanel/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="Transform/Control/ColorRect/EndGame/EndGame" to="." method="_on_end_game_pressed"]
